--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,19 @@ requests~=2.28.1
 spotipy~=2.23.0
 Flask~=2.3.2
 beautifulsoup4~=4.12.2
-python-dotenv~=0.20.0
+python-dotenv==1.0.0
+pip~=23.1.2
+attrs~=22.1.0
+cryptography==41.0.1
+Pillow~=9.5.0
+Jinja2~=3.1.2
+MarkupSafe~=2.1.1
+Werkzeug~=2.3.6
+click~=8.1.3
+blinker~=1.6.2
+itsdangerous~=2.1.2
+setuptools~=65.5.0
+visitor~=0.1.3
+packaging~=23.1
+zipp~=3.4.1
+platformdirs~=3.2.0
