--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ cryptography==41.0.1
 Pillow~=9.5.0
 Jinja2~=3.1.2
 MarkupSafe~=2.1.1
-Werkzeug~=2.3.6
+Werkzeug==2.2.3
 click~=8.1.3
 blinker~=1.6.2
 itsdangerous~=2.1.2
